app/style.css
/* ... */
.palette div {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  border: 5px solid black;
}

.image-frame {
  width: 100%;
  max-width: 400px;
  height: 400px;
  margin: 0 auto;
  border-radius: 40px;
  border: 6px solid #222;
  border-left: 10px solid #222;
  border-bottom: 10px solid #222;
  background-color: #ffffff;
}

.paint-canvas {
  box-sizing: content-box;
  margin: 0 auto;
}

.canvas-and-paints {
  display: grid;
  grid-template-rows: 1fr 80px;
  justify-content: center;
}

.loader {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 0 auto;
  padding: 20px;
}

.loader-gif {
  max-width: 240px;
  margin-bottom: 1em;
}

.gallery {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 20px;
}

.gallery-item {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 400px;
  height: 400px;
  border-radius: 40px;
  border: 6px solid #222;
  border-left: 10px solid #222;
  border-bottom: 10px solid #222;
  background-color: #ffffff;
}

.gallery-item:first-of-type {
  width: 300px;
  height: min-content;
  border-radius: 4px;
  font-size: 1.4em;
  font-weight: bold;
  text-align: center;
  border: 6px solid #222;
  background-color: #f1c40f;
}

.stack-item {
  width: 100%;
}

.stack-text {
  display: block;
  text-align: center;
  line-height: 1.4em;
  justify-content: center;
  padding: 40px;
  font-size: 2.6rem;
  align-items: center;
}

.gallery-item:first-of-type .stack-text {
  font-size: 1.4em;
}

.score-card {
  width: 100%;
  padding: 10px;
  max-width: 90vw;
  min-width: 400px;
}

.scores {
  margin: 0;
  padding: 0;
}

.score {
  display: flex;
  justify-content: space-between;
  list-style:  none;
  line-height: 1.8em;
  font-size: 1em;
}

.score-score {
  text-align: right;
}

.rules {
  position: absolute;
  top: 20px;
  right: 20px;
  padding: 10px 20px;
  border: 0;
  border-radius: 4px;
  font-size: 1em;
  color: white;
  background-color: #9265ba;
  cursor: pointer;
  box-shadow: 0 6px #704c90;
  z-index: 3;
}

.rules:before {
  content: "how to play";
}

.rules-checkbox:checked ~ .rules:before {
  content: "close";
}

.rules-checkbox {
  opacity: 0;
  width: 0;
  height: 0;
  padding: 0;
  margin: 0;
  position: absolute
}

.rules-text {
  position: absolute;
  top: 0;
  width: 100%;
  height:100vh;
  padding: 20px 20px 40px;
  overflow-y: auto;
  background-color: #f1c40f;
  transform: translate(0,-100%);
  transition: ease-in-out all 0.5s;
  z-index: 2;
}

.rules-text-container {
  max-width: 960px;
  margin: 0 auto;
}

.rules-checkbox:checked ~ .rules-text {
  transform: translate(0,0);
}

.rules-text p {
  line-height: 1.6em;
}

.rules-text li {
  margin-bottom: 1em;
}

.rules-img {
  width: 100%;
}

.offline-notice {
  font-weight: bolder;
}

.footer {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 20px;
  text-align: right;
}

.ably {
  display: block;
  height: 40px;
  width: 120px;
  color: transparent;
  background: url(./assets/ably.svg) no-repeat bottom right;
  background-size: 100px;
}

@media (min-width: 740px) {
  h1 {
    position: absolute;
    top: 20px;
    left: 20px;
    width: 240px;
    height: 180px;
    border: 0;
  }

  .section-heading {
    font-size: 2.6rem;
  }

  .form, .game-lobby {
    margin: 0 auto;
    padding: 30px 40px 50px;
    font-size: 1.4em;
    border-radius: 40px;
    background-color: #f1c40f;
    border: 6px solid #222;
    border-left: 10px solid #222;
    border-bottom: 10px solid #222;
  }

  .join-container, .game-info, .offline-notice {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-height: 100vh;
  }
  
  .copy-link-text {
    width: calc(100% - 150px);
  }

  .timer {
    position: absolute;
    top: calc(100% - 40px);
    left: 130px;
    width: calc(100vh - 180px - 60px);
    height: 40px;
    border-radius: 4px;
    border: 4px solid #222;
    transform: rotate(-90deg);
    transform-origin: top left;
    background-color: white;
  }

  .timer-bar {
    background-color: #f1c40f;
  }
  
  .drawing-hint {
    perspective: 1000px;
    position: relative;
    min-height: 8em;
    max-width: 300px;
    top: auto;
    left: auto;
    width: 100%;
    margin: 1em auto;
    font-weight: bold;
    text-align: center;
    transition: 0.6s;
    transform-style: preserve-3d;
    animation-name: flipInY;
    animation-fill-mode: forwards;
    animation-iteration-count: 1;
    animation-timing-function: ease-in;
    animation-delay: 2s;
    animation-duration: 1s;
    color: #333;
    text-shadow: none;
  }

  .hint-front, .hint-back {
    backface-visibility: hidden;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    padding: 30px;
    border-radius: 4px;
    background-color: white;
    border: 4px solid #222;
    font-size: 1.4em;
  }

  .hint-front {
    z-index: 2;
    transform: rotateY(0deg);
    background-color: #f1c40f;
  }

  .hint-back {
    transform: rotateY(180deg);
  }
  
  .caption {
    display: grid;
    grid-template-areas: 
    "top top"
    "img cap"
    "img but";
    grid-gap: 20px
  }
  
  .caption .section-heading {
    grid-area: top;
    margin-bottom: 10px;
  }
  
  .caption .image-frame {
    grid-area: img;
    margin-bottom: 0;
  }
  
  .caption .input {
    grid-area: cap;
    font-size: 2em;
  }
  
  .caption .form-button {
    grid-area: but;
    height: min-content;
  }

  .gallery {
    gap: 60px;
  }

  .score {
    font-size: 1.6em;
  }

  .hide {
    display: block;
  }

  .playfield {
    margin: 0;
  }

  .footer {
    flex-direction: column;
    justify-content: flex-end;
    align-items: flex-end;
    position: absolute;
    bottom: 0;
    right: 0;
  }

  .ably {
    width: 160px;
    height: 70px;
    background-size: 160px;
  }
}

@keyframes flipInY {
  0% { transform: rotateY(0deg); }
  to { transform: rotateY(180deg); }
}

